fixed font on mobile header

--- a/style2.css
+++ b/style2.css
@@ -42,7 +42,7 @@ header .container {
         display: flex;
         flex-direction: column;
         padding: 0; 
-        font-family: "Nanum Myeongj";
+        font-family: "Nanum Myeongjo";
         line-height: -2em;
     }
 }
@@ -57,7 +57,6 @@ and (max-device-width : 480px) {
         display: flex;
         flex-direction: column;
         padding-top: 5%; 
-        font-family: "Nanum Myeongj";
     }
 }
 
